made changes in code

--- a/02-variables.yaml
+++ b/02-variables.yaml
@@ -1,8 +1,9 @@
-- name: Demo on variables usage
-  hosts: all
-  vars:
-    URL: play.google.com 
+# In ansible, if you attempt to print a variable that is not decalred, ANSIBLE throws an exception!
+- name: Demo on variables usage 
+  hosts: all 
+  vars:  
+    URL: play.google.com                         # Declaring variable at playLevel, all the tasks of this play inherits this value.
   tasks:
-    -name: Printing the variable
-     ansible.builtin.debug:
-       msg: value of the URL is {{URL}}
+    - name: Printing the variable 
+      ansible.builtin.debug:
+        msg: Value of the URL is {{URL}}  
