--- a/04-shell.yaml
+++ b/04-shell.yaml
@@ -3,4 +3,8 @@
   tasks:
     - name: Running uptime command
       ansible.builtin.shell: uptime
+      register: OUT
+    - name: Printing the system uptime 
+      ansible.builtin.debug:
+        msg: Value of the uptime is {{OUT}} 
  
