made changes in code

--- a/10-package.yaml
+++ b/10-package.yaml
@@ -6,3 +6,9 @@
       ansible.builtin.package:
         name: nginx
         state: present
+    - name: Installing httpd
+      ansible.builtin.package:
+        name: 
+          - httpd
+          - jq
+        state: present
